unpackaged/main/default/objects/Time_Log__c/Time_Log__c.object-meta.xml
<CustomObject>
    <label>Time Log</label>
    <nameField>
        <label>Time Log For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>