unpackaged/main/default/objects/Time_Log__c/fields/Last_Time_Checked_Out__c.field-meta.xml
<CustomField>
    <fullName>Last_Time_Checked_Out__c</fullName>
    <label>Last Time Checked-Out</label>
    <type>DateTime</type>
</CustomField>