unpackaged/main/default/objects/Time_Log__c/fields/Log_Action__c.field-meta.xml
<CustomField>
    <fullName>Log_Action__c</fullName>
    <label>Log Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check-In</fullName>
            </value>
            <value>
                <fullName>Check-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>