unpackaged/main/default/objects/Time_Log__c/validationRules/Employee_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Employee_Required</fullName>
    <active>true</active>
    <description>This checks if the Employee field is not empty.</description>
    <errorConditionFormula>ISBLANK( Employee__c )</errorConditionFormula>
    <errorDisplayField>Employee__c</errorDisplayField>
    <errorMessage>Please select the respective Employee name.</errorMessage>
</ValidationRule>